fix(content): remove attempt to stretch iframe/img/video wrapped in p
Remove attempt to stretch single `iframe`/`img`/`video` wrapped in a paragraph since `:only-child` doesn't consider text nodes. So this attempt would also stretch any paragraph with text and one image, resulting in random long lines of text.

--- a/src/_content.less
+++ b/src/_content.less
@@ -34,10 +34,6 @@
       .reading-width();
 
       box-sizing: border-box;
-
-      &:has(> iframe:only-child, > img:only-child, > video:only-child) {
-        max-width: none;
-      }
     }
     table {
       border-collapse: collapse;
